# monk

./: pyproject.toml
examples/: greeter.monkey  map.monkey
monk/: __main__.py  ast.py  evaluator.py  lexer.py  object.py  parser.py  token.py  utils.py
tests/: test_ast.py  test_evaluator.py  test_lexer.py  test_parser.py
