[project]
name = "monk"
version = "0.1.0"
requires-python = ">=3.13"

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.ruff]
line-length = 100
lint.select = ["ALL"]
lint.ignore = ["D", "T201"]
lint.per-file-ignores = { "tests/**/*.py" = [
    "S101",   # Allow asserts in tests
    "FBT001", # Allow boolean-typed positionals in tests
] }
